# flux-agent

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/steering/: product.md  structure.md  tech.md
auto_agent/: __init__.py
auto_agent/core/: __init__.py  executor.py  parser.py  registry.py
auto_agent/nodes/: __init__.py
auto_agent/nodes/base/: __init__.py  interfaces.py  node.py
auto_agent/nodes/builtin/control/: condition.py  loop.py
auto_agent/nodes/builtin/io/: http.py  human.py  parallel.py  subgraph.py  tool.py
auto_agent/nodes/builtin/llm/: __init__.py  llm.py
auto_agent/nodes/builtin/transform/: transform.py
auto_agent/nodes/business/: README.md  __init__.py
auto_agent/nodes/examples/: advanced_node.py  simple_node.py
auto_agent/utils/: expression.py
docs/: AGENTS.md  CONFIG_REFERENCE.md  DEVELOPMENT.md  EXTERNAL_NODES.md  MCP.md  NODE_DEVELOPMENT.md  RAG.md  SKILLS.md  TECHNICAL.md  USAGE.md
examples/: .env.example  custom_nodes.json  demo_condition.py  demo_condition_llm.py  demo_http.py  demo_human.py  demo_llm.py  demo_loop.py  demo_parallel.py  demo_smart_customer_service.py  demo_subgraph.py  demo_tool.py  demo_transform.py  run_custom_node.py  run_example.py  run_transform_demo.py  simple_chain.html  simple_chain.json  test_answer_info.txt  test_condition_end.py  tools.py  transform_demo.json
examples/agents/: demo_agents.py  demo_image_agents.py  demo_mcp_agent.py  demo_priority_tools.py  demo_skills.py  demo_step_callback.py  demo_supervisor.py
examples/external_nodes_example/: README.md  pyproject.toml  test_external_node.py
examples/external_nodes_example/gvideo_nodes/: __init__.py  video_render.py
examples/node/: custom_nodes.html  custom_nodes.json  demo_json.py  demo_llm.py  demo_llm_json_schema.py  demo_llm_rag.py  demo_loop.py  demo_mcp.py  demo_subgraph.py  demo_tool.py  demo_transform.py  mcp_math_server.py  run_custom_node.py  workflow_mcp.json
examples/rag/: create.py  document.py  idioms.json  search.py
examples/workflow/: question_script.py  question_script_config.json  run_agent_demo.py  run_example.py  simple_chain.json
flux_agent/: __init__.py
flux_agent/agents/: __init__.py  base.py  deep_agent.py  factory.py  plan_execute_agent.py  react_agent.py  reflexion_agent.py  registry.py  skill.py  supervisor_agent.py
flux_agent/agents/multi/: __init__.py  mailbox.py
flux_agent/agents/utils/: __init__.py  callbacks.py  logging.py  prompts.py  token_usage.py
flux_agent/core/: executor.py  parser.py  registry.py  state.py
flux_agent/mcp/: __init__.py  client.py
flux_agent/nodes/: __init__.py
flux_agent/nodes/base/: config.py  node.py
flux_agent/nodes/builtin/: __init__.py
flux_agent/nodes/builtin/control/: __init__.py  condition.py  loop.py
flux_agent/nodes/builtin/io/: __init__.py  http.py  human.py  parallel.py  subgraph.py  tool.py
flux_agent/nodes/builtin/llm/: __init__.py  agent.py  llm.py
flux_agent/nodes/builtin/rag/: __init__.py  search.py
flux_agent/nodes/builtin/transform/: __init__.py  json.py  transform.py
flux_agent/nodes/business/: __init__.py
flux_agent/nodes/examples/: __init__.py  advanced_node.py  simple_node.py
flux_agent/rag/: __init__.py  document_loader.py  embeddings.py  knowledge_base.py  storage.py  vector_store.py
flux_agent/tools/: __init__.py  bash_tool.py  file_ops.py  generate_mermaid.py  web_fetch.py
flux_agent/utils/: __init__.py  pretty_state.py
