[project]
name = "flux-agent"
version = "0.2.9"
description = "面向生产环境的 LLM Agent 与 Workflow 编排框架。通过 JSON 配置或纯代码即可构建多 Agent 协作流，内置四种 Agent 模式、Skill 插件系统、MCP 协议接入、RAG 知识库，以及十余种开箱即用的工作流节点。"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name = "Flux-Agent Team", email = "xiaoxu344@163.com"}
]

keywords = ["agent", "langgraph", "llm", "workflow", "orchestration", "flux"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "requests>=2.28.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# 完整功能
all = [
    "flux-agent[core,openai,anthropic,google,chroma,faiss,rag,agents,mcp,dev]",
]

# 各 LLM 提供商（按需选择安装）
openai = ["langchain-openai>=0.2.0"]
anthropic = ["langchain-anthropic>=0.3.0"]
google = ["langchain-google-genai>=2.0.0"]

# 向量存储（用于 RAG）
chroma = ["langchain-chroma>=0.1.0"]
faiss = ["faiss-cpu>=1.7.0"]

# 完整 LLM 支持
llms = [
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
]

# 完整 RAG 支持
rag = [
    "langchain-chroma>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "faiss-cpu>=1.7.0",
]

# Agent 模式（Deep Agent 支持）
agents = ["deepagents>=0.1.0"]

# MCP 支持
mcp = ["langchain-mcp-adapters>=0.1.0", "mcp>=1.0.0"]

# 开发依赖
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/xiaoxuz/flux-agent"
Documentation = "https://github.com/xiaoxuz/flux-agent#readme"
Repository = "https://github.com/xiaoxuz/flux-agent"
Issues = "https://github.com/xiaoxuz/flux-agent/issues"

[project.entry-points."flux_agent.nodes"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["flux_agent*"]

[tool.setuptools.package-data]
flux_agent = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
