[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gvideo-nodes"
version = "1.0.0"
description = "视频渲染业务节点包 - flux-agent 外部节点示例"
authors = [{name = "Demo", email = "demo@example.com"}]
dependencies = []

[project.entry-points."flux-agent.nodes"]
video_render = "gvideo_nodes.video_render:VideoRenderNode"

[tool.setuptools.packages.find]
where = ["."]
include = ["gvideo_nodes*"]
